# osmosis-ctv-tool

./: .gitignore  ASCII_ART_FIX.md  BUILD_REFERENCE.md  BUILD_TROUBLESHOOTING.md  DEPLOYMENT_INSTRUCTIONS.md  DOWNLOAD_SYSTEM_GUIDE.md  Dockerfile  ENCODING_FIX_COMPLETE.md  FINAL_BUILD_STATUS.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_QUICKREF.md  GITHUB_ACTIONS_STATUS.md  GITHUB_ACTIONS_UPDATED.md  GITHUB_LARGE_FILE_SOLUTIONS.md  GITHUB_README.md  GITHUB_RELEASE_GUIDE.md  INSTALLATION.md  INSTALLER_IMPROVEMENTS.md  INSTALLER_SUCCESS_SUMMARY.md  Launch_Osmosis.bat  MANIFEST.in  PYTHON_3131_BUILD_GUIDE.md  PYUBER_FIX_README.md  PYUBER_INTEGRATION_COMPLETE.md  README.md  REORGANIZATION_SUMMARY.md  SMARTCTV_COMPREHENSIVE_FIX.md  SMARTCTV_IMPORT_FIX.md  SMARTCTV_MODULE_IMPORT_FIX.md  ascii_art.py  build.bat  build.ps1  build.py  build.sh  build_app.py  build_python3131.bat  build_python3131.ps1  build_validator_python3131.py  create_package.bat  (+22 more)
PyUber/: backend.py  client.py
core_package/: Install_Osmosis.bat  config.json
package_output/: osmosis_download.html
resources/: config.json
src/: BUILD_SUMMARY.md  EIO_UCIE.mtpl.csv  LOGO_FIX_SUMMARY.md  MIO_DDR.mtpl.csv  SIO_PCIE.mtpl.csv  __init__.py  _master.py  build_app.py  build_validator.py  clkutils_config_json_to_csv.py  configFile_DMR.json  ctvlist_gui.py  deploy_ctvlist.py  download_server.py  file_functions.py  hook-pandas.py  index_ctv.py  index_ctv_backup.py  jmp_python.py  log_10.csv  log_12.csv  log_14.csv  log_15.csv  log_16.csv  log_6.csv  mtpl_parser.py  osmosis.spec  pyuber_query.py  (+15 more)
(+107 files in other folders)
